--- a/smart_home_tng/components/notify/manifest.json
+++ b/smart_home_tng/components/notify/manifest.json
@@ -2,6 +2,6 @@
   "domain": "notify",
   "name": "Notifications",
   "documentation": "https://www.home-assistant.io/integrations/notify",
-  "codeowners": ["@home-assistant/core"],
+  "codeowners": ["@nixe64"],
   "quality_scale": "internal"
 }
