Abhängigkeit von "home-assistant-frontend" entfernt.

--- a/smart_home_tng/components/frontend/manifest.json
+++ b/smart_home_tng/components/frontend/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "frontend",
-  "name": "Home Assistant Frontend",
+  "name": "Frontend for Smart Home - The Next Generation",
   "documentation": "https://www.home-assistant.io/integrations/frontend",
-  "requirements": ["home-assistant-frontend>=20220802.0"],
+  "requirements": [],
   "dependencies": [
     "api",
     "auth",
