--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-__pycache__
+**/__pycache__
 .venv/
 .secrets
 *-badge.md
 .config/
-smart_home_tng/frontend
+smart_home_tng/frontend/**
 
 .gitsecret/keys/random_seed
