--- a/smart_home_tng/components/update/manifest.json
+++ b/smart_home_tng/components/update/manifest.json
@@ -2,6 +2,6 @@
   "domain": "update",
   "name": "Update",
   "documentation": "https://www.home-assistant.io/integrations/update",
-  "codeowners": ["@home-assistant/core"],
+  "codeowners": ["@nixe64"],
   "quality_scale": "internal"
 }
