--- a/smart_home_tng/components/lock/manifest.json
+++ b/smart_home_tng/components/lock/manifest.json
@@ -2,6 +2,6 @@
   "domain": "lock",
   "name": "Lock",
   "documentation": "https://www.home-assistant.io/integrations/lock",
-  "codeowners": ["@home-assistant/core"],
+  "codeowners": ["@nixe64"],
   "quality_scale": "internal"
 }
