--- a/smart_home_tng/components/siren/manifest.json
+++ b/smart_home_tng/components/siren/manifest.json
@@ -2,6 +2,6 @@
   "domain": "siren",
   "name": "Siren",
   "documentation": "https://www.home-assistant.io/integrations/siren",
-  "codeowners": ["@home-assistant/core", "@raman325"],
+  "codeowners": ["@nixe64"],
   "quality_scale": "internal"
 }
