--- a/smart_home_tng/components/sun/manifest.json
+++ b/smart_home_tng/components/sun/manifest.json
@@ -2,7 +2,7 @@
   "domain": "sun",
   "name": "Sun",
   "documentation": "https://www.home-assistant.io/integrations/sun",
-  "codeowners": ["@Swamp-Ig"],
+  "codeowners": ["@nixe64"],
   "quality_scale": "internal",
   "iot_class": "calculated",
   "config_flow": true
