--- a/smart_home_tng/components/safe_mode/manifest.json
+++ b/smart_home_tng/components/safe_mode/manifest.json
@@ -3,7 +3,7 @@
   "name": "Safe Mode",
   "config_flow": false,
   "documentation": "https://www.home-assistant.io/integrations/safe_mode",
-  "dependencies": ["frontend", "persistent_notification", "cloud"],
+  "dependencies": ["frontend", "persistent_notification"],
   "codeowners": ["@nixe64"],
   "quality_scale": "internal"
 }
