--- a/smart_home_tng/components/radio_browser/manifest.json
+++ b/smart_home_tng/components/radio_browser/manifest.json
@@ -2,7 +2,7 @@
   "domain": "radio_browser",
   "name": "Radio Browser",
   "config_flow": true,
-  "documentation": "https://www.home-assistant.io/integrations/radio",
+  "documentation": "https://www.home-assistant.io/integrations/radio_browser",
   "requirements": ["radios>=0.1.1"],
   "codeowners": ["@nixe64"],
   "iot_class": "cloud_polling"
