Bug in mobile_app ohne cloud-Komponente

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,10 @@
             "label": "auf Gandalf bereitstellen",
             "type": "shell",
             "command": "script/deploy.sh",
-            "group": "none",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
             "presentation": {
                 "reveal": "always",
                 "panel": "new"
