--- a/smart_home_tng/components/mobile_app/manifest.json
+++ b/smart_home_tng/components/mobile_app/manifest.json
@@ -3,7 +3,7 @@
   "name": "Mobile App",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/mobile_app",
-  "requirements": ["PyNaCl>=1.5.0"],
+  "requirements": ["PyNaCl>=1.5.0, <1.6"],
   "dependencies": ["http", "webhook", "person", "tag", "websocket_api"],
   "codeowners": ["@nixe64"],
   "quality_scale": "internal",
