--- a/smart_home_tng/components/network/manifest.json
+++ b/smart_home_tng/components/network/manifest.json
@@ -2,7 +2,7 @@
     "domain": "network",
     "name": "Network Configuration",
     "documentation": "https://www.home-assistant.io/integrations/network",
-    "requirements": ["ifaddr==0.1.7"],
+    "requirements": ["ifaddr>=0.1.7, < 0.2"],
     "codeowners": ["@nixe64"],
     "quality_scale": "internal",
     "iot_class": "local_push"
