--- a/smart_home_tng/components/pyscript/manifest.json
+++ b/smart_home_tng/components/pyscript/manifest.json
@@ -4,7 +4,7 @@
   "config_flow": true,
   "documentation": "https://hacs-pyscript.readthedocs.io/en/stable/",
   "issue_tracker": "https://github.com/custom-components/pyscript/issues",
-  "requirements": ["croniter>=1.3.4", "watchdog>=2.1.6"],
+  "requirements": ["croniter>=1.4.1, < 1.5", "watchdog>=3.0.0, <3.1"],
   "ssdp": [],
   "zeroconf": [],
   "homekit": {},
