--- a/smart_home_tng/components/usb/manifest.json
+++ b/smart_home_tng/components/usb/manifest.json
@@ -2,7 +2,7 @@
   "domain": "usb",
   "name": "USB Discovery",
   "documentation": "https://www.home-assistant.io/integrations/usb",
-  "requirements": ["pyudev>=0.22.0", "pyserial>=3.5"],
+  "requirements": ["pyudev>=0.24.1, <0.25", "pyserial>=3.5, < 3.6"],
   "codeowners": ["@nixe64"],
   "dependencies": ["websocket_api"],
   "quality_scale": "internal",
