--- a/smart_home_tng/components/backup/manifest.json
+++ b/smart_home_tng/components/backup/manifest.json
@@ -4,6 +4,6 @@
   "documentation": "https://www.home-assistant.io/integrations/backup",
   "dependencies": ["http", "websocket_api"],
   "codeowners": ["@nixe64"],
-  "requirements": ["securetar>=2022.2.0"],
+  "requirements": ["securetar>=2023.3.0, < 2023.4"],
   "quality_scale": "internal"
 }
