--- a/smart_home_tng/components/camera/manifest.json
+++ b/smart_home_tng/components/camera/manifest.json
@@ -3,7 +3,7 @@
   "name": "Camera",
   "documentation": "https://www.home-assistant.io/integrations/camera",
   "dependencies": ["http"],
-  "requirements": ["PyTurboJPEG>=1.6.6"],
+  "requirements": ["PyTurboJPEG>=1.7.1, < 1.8"],
   "after_dependencies": ["media_player"],
   "codeowners": ["@nixe64"],
   "quality_scale": "internal"
