--- a/smart_home_tng/components/dhcp/manifest.json
+++ b/smart_home_tng/components/dhcp/manifest.json
@@ -2,7 +2,7 @@
   "domain": "dhcp",
   "name": "DHCP Discovery",
   "documentation": "https://www.home-assistant.io/integrations/dhcp",
-  "requirements": ["aiodiscover>=1.4.11"],
+  "requirements": ["aiodiscover>=1.4.16, < 1.5"],
   "codeowners": ["@nixe64"],
   "quality_scale": "internal",
   "iot_class": "local_push",
