--- a/smart_home_tng/components/discovery/manifest.json
+++ b/smart_home_tng/components/discovery/manifest.json
@@ -2,7 +2,7 @@
   "domain": "discovery",
   "name": "Discovery",
   "documentation": "https://www.home-assistant.io/integrations/discovery",
-  "requirements": ["netdisco>=3.0.0"],
+  "requirements": ["netdisco>=3.0.0, < 3.1"],
   "after_dependencies": ["zeroconf"],
   "codeowners": ["@nixe64"],
   "quality_scale": "internal",
