--- a/smart_home_tng/components/fritz/manifest.json
+++ b/smart_home_tng/components/fritz/manifest.json
@@ -2,7 +2,7 @@
   "domain": "fritz",
   "name": "AVM FRITZ!Box Tools",
   "documentation": "https://www.home-assistant.io/integrations/fritz",
-  "requirements": ["fritzconnection>=1.8.0", "xmltodict>=0.13.0"],
+  "requirements": ["fritzconnection>=1.12.0, < 1.13", "xmltodict>=0.13.0, < 0.14"],
   "dependencies": ["network"],
   "codeowners": ["@nixe64"],
   "config_flow": true,
