--- a/smart_home_tng/components/hue/manifest.json
+++ b/smart_home_tng/components/hue/manifest.json
@@ -3,7 +3,7 @@
   "name": "Philips Hue",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/hue",
-  "requirements": ["aiohue=>4.6.2,<4.7"],
+  "requirements": ["aiohue>=4.6.2,<4.7"],
   "ssdp": [
     {
       "manufacturer": "Royal Philips Electronics",
