--- a/smart_home_tng/components/met/manifest.json
+++ b/smart_home_tng/components/met/manifest.json
@@ -3,7 +3,7 @@
   "name": "Meteorologisk institutt (Met.no)",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/met",
-  "requirements": ["pyMetno>=0.9.0"],
+  "requirements": ["pyMetno>=0.10.0, <0.11"],
   "codeowners": ["@nixe64"],
   "iot_class": "cloud_polling",
   "loggers": ["metno"]
