--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,6 @@ dependencies = [
     "ciso8601 >= 2.3.0, < 2.4",
     "colorlog >= 6.7.0, < 6.8",
     "cryptography >= 36.0.2, < 36.1",
-    "hass-nabucasa >= 0.54.1, < 0.55",
     "jinja2 >= 3.1.2, < 3.2",
     "pyJWT >= 2.6.0, < 2.7",
     "pyotp >= 2.8.0, < 2.9",
@@ -43,6 +42,7 @@ dependencies = [
     "PyTurboJPEG >= 1.7.1, < 1.8",
     "pyYAML >= 6.0, < 6.1",
     "python-slugify >= 8.0.1, < 8.2",
+    "requests >= 2.31.0, < 2.32",
     "SQLAlchemy >= 1.4.37, < 1.5",
     "urllib3 >= 1.26.16, < 1.27",
     "voluptuous >= 0.13.1, < 0.14",
@@ -63,7 +63,11 @@ artifacts = [
 exclude = [
     ".github",
     ".config", 
-    ".pytest_cache"
+    ".pytest_cache",
+    "nodejs/frontend/build",
+    "nodejs/frontend/node_modules",
+    "nodejs/frontend/.yarn/cache",
+    "nodejs/frontend/.yarn/install-state.gz"
 ]
 
 [tool.hatch.build.targets.wheel]
