Bug in "Setup Node" entfernt. Fehlender Paramater, da das frontend nicht im Hauptverzeichnis liegt.

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,6 +30,7 @@ jobs:
               with:
                 node-version: 16
                 cache: yarn
+                cache-dependency-path: "nodejs/frontend/yarn.lock"
 
             - name: Install dependencies
               run: .nodejs/frontend/script/bootstrap
