--- a/smart_home_tng/components/cloud/manifest.json
+++ b/smart_home_tng/components/cloud/manifest.json
@@ -2,7 +2,7 @@
   "domain": "cloud",
   "name": "Home Assistant Cloud",
   "documentation": "https://www.home-assistant.io/integrations/cloud",
-  "requirements": ["hass-nabucasa>=0.54.1, < 0.55"],
+  "requirements": [],
   "dependencies": ["http", "webhook"],
   "after_dependencies": ["google_assistant", "alexa"],
   "codeowners": ["@nixe64"],
