--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,6 @@ classifiers = [
 ]
 requires-python = ">=3.11.4"
 dependencies = [
-    "aiodiscover >= 1.4.16, < 1.5",
     "aiohttp >= 3.8.4, < 3.9",
     "aiohttp-cors >= 0.7.0, < 0.8",
     "astral >= 3.2, < 3.3",
@@ -35,13 +34,15 @@ dependencies = [
     "colorlog >= 6.7.0, < 6.8",
     "cryptography >= 41.0.2, < 41.1",
     "jinja2 >= 3.1.2, < 3.2",
-    "pyJWT >= 2.6.0, < 2.7",
+    "packaging >= 23.1, < 23.2",
+    "pyjwt >= 2.6.0, < 2.7",
     "pyotp >= 2.8.0, < 2.9",
-    "PyQRCode >= 1.2.1, < 1.3",
-    "PyTurboJPEG >= 1.7.1, < 1.8",
-    "pyYAML >= 6.0, < 6.1",
+    "pyqrcode >= 1.2.1, < 1.3",
     "python-slugify >= 8.0.1, < 8.2",
+    "pyturbojpeg >= 1.7.1, < 1.8",
+    "pyyaml >= 6.0, < 6.1",
     "requests >= 2.31.0, < 2.32",
+    "sqlalchemy>=2.0.18, < 2.1",
     "urllib3 >= 1.26.16, < 1.27",
     "voluptuous >= 0.13.1, < 0.14",
     "voluptuous-serialize >= 2.6.0, < 2.7",
