--- a/nodejs/frontend/.gitignore
+++ b/nodejs/frontend/.gitignore
@@ -5,7 +5,7 @@
 build
 hass_frontend/*
 dist
-#node_modules
+node_modules
 
 # yarn
 .yarn/*
@@ -15,7 +15,7 @@ dist
 !.yarn/sdks
 !.yarn/versions
 .pnp.*
-node_modules
+yarn.lock
 yarn-error.log
 npm-debug.log
 
