--- a/nodejs/frontend/package.json
+++ b/nodejs/frontend/package.json
@@ -24,59 +24,59 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@braintree/sanitize-url": "^6.0.4",
-    "@codemirror/autocomplete": "^0.19.12",
+    "@codemirror/autocomplete": "^0.19.15",
     "@codemirror/commands": "^0.19.8",
     "@codemirror/gutter": "^0.19.9",
-    "@codemirror/highlight": "^0.19.7",
+    "@codemirror/highlight": "^0.19.8",
     "@codemirror/history": "^0.19.2",
-    "@codemirror/legacy-modes": "^0.19.0",
-    "@codemirror/rectangular-selection": "^0.19.1",
-    "@codemirror/search": "^0.19.6",
-    "@codemirror/state": "^0.19.6",
-    "@codemirror/stream-parser": "^0.19.5",
+    "@codemirror/legacy-modes": "^0.19.1",
+    "@codemirror/rectangular-selection": "^0.19.2",
+    "@codemirror/search": "^0.19.10",
+    "@codemirror/state": "^0.19.9",
+    "@codemirror/stream-parser": "^0.19.9",
     "@codemirror/text": "^0.19.6",
-    "@codemirror/view": "^0.19.40",
-    "@formatjs/intl-datetimeformat": "^4.2.5",
-    "@formatjs/intl-getcanonicallocales": "^1.8.0",
-    "@formatjs/intl-locale": "^2.4.40",
-    "@formatjs/intl-numberformat": "^7.2.5",
-    "@formatjs/intl-pluralrules": "^4.1.5",
-    "@formatjs/intl-relativetimeformat": "^9.3.2",
+    "@codemirror/view": "^0.19.48",
+    "@formatjs/intl-datetimeformat": "^4.5.2",
+    "@formatjs/intl-getcanonicallocales": "^1.9.2",
+    "@formatjs/intl-locale": "^2.4.47",
+    "@formatjs/intl-numberformat": "^7.4.3",
+    "@formatjs/intl-pluralrules": "^4.3.3",
+    "@formatjs/intl-relativetimeformat": "^9.5.2",
     "@formatjs/intl-utils": "^3.8.4",
-    "@fullcalendar/common": "5.9.0",
-    "@fullcalendar/core": "5.9.0",
-    "@fullcalendar/daygrid": "5.9.0",
-    "@fullcalendar/interaction": "5.9.0",
-    "@fullcalendar/list": "5.9.0",
-    "@fullcalendar/timegrid": "5.9.0",
-    "@lit-labs/motion": "^1.0.2",
-    "@lit-labs/virtualizer": "patch:@lit-labs/virtualizer@0.7.0-pre.2#./.yarn/patches/@lit-labs/virtualizer/event-target-shim.patch",
-    "@material/chips": "14.0.0-canary.261f2db59.0",
-    "@material/data-table": "14.0.0-canary.261f2db59.0",
-    "@material/mwc-button": "0.25.3",
-    "@material/mwc-checkbox": "0.25.3",
-    "@material/mwc-circular-progress": "0.25.3",
-    "@material/mwc-dialog": "0.25.3",
-    "@material/mwc-drawer": "^0.25.3",
-    "@material/mwc-fab": "0.25.3",
-    "@material/mwc-formfield": "0.25.3",
-    "@material/mwc-icon-button": "patch:@material/mwc-icon-button@0.25.3#./.yarn/patches/@material/mwc-icon-button/remove-icon.patch",
-    "@material/mwc-linear-progress": "0.25.3",
-    "@material/mwc-list": "^0.25.3",
-    "@material/mwc-menu": "0.25.3",
-    "@material/mwc-radio": "0.25.3",
-    "@material/mwc-ripple": "0.25.3",
-    "@material/mwc-select": "0.25.3",
-    "@material/mwc-slider": "0.25.3",
-    "@material/mwc-switch": "0.25.3",
-    "@material/mwc-tab": "0.25.3",
-    "@material/mwc-tab-bar": "0.25.3",
-    "@material/mwc-textarea": "^0.25.3",
-    "@material/mwc-textfield": "0.25.3",
-    "@material/mwc-top-app-bar-fixed": "^0.25.3",
-    "@material/top-app-bar": "14.0.0-canary.261f2db59.0",
-    "@mdi/js": "7.0.96",
-    "@mdi/svg": "7.0.96",
+    "@fullcalendar/common": "5.11.5",
+    "@fullcalendar/core": "5.11.5",
+    "@fullcalendar/daygrid": "5.11.5",
+    "@fullcalendar/interaction": "5.11.5",
+    "@fullcalendar/list": "5.11.5",
+    "@fullcalendar/timegrid": "5.11.5",
+    "@lit-labs/motion": "^1.0.6",
+    "@lit-labs/virtualizer": "^2.0.10",
+    "@material/chips": "14.0.0",
+    "@material/data-table": "14.0.0",
+    "@material/mwc-button": "0.27.0",
+    "@material/mwc-checkbox": "0.27.0",
+    "@material/mwc-circular-progress": "0.27.0",
+    "@material/mwc-dialog": "0.27.0",
+    "@material/mwc-drawer": "^0.27.0",
+    "@material/mwc-fab": "0.27.0",
+    "@material/mwc-formfield": "0.27.0",
+    "@material/mwc-icon-button": "^0.27.0",
+    "@material/mwc-linear-progress": "0.27.0",
+    "@material/mwc-list": "^0.27.0",
+    "@material/mwc-menu": "0.27.0",
+    "@material/mwc-radio": "0.27.0",
+    "@material/mwc-ripple": "0.27.0",
+    "@material/mwc-select": "0.27.0",
+    "@material/mwc-slider": "0.27.0",
+    "@material/mwc-switch": "0.27.0",
+    "@material/mwc-tab": "0.27.0",
+    "@material/mwc-tab-bar": "0.27.0",
+    "@material/mwc-textarea": "^0.27.0",
+    "@material/mwc-textfield": "0.27.0",
+    "@material/mwc-top-app-bar-fixed": "^0.27.0",
+    "@material/top-app-bar": "14.0.0",
+    "@mdi/js": "7.3.67",
+    "@mdi/svg": "7.3.67",
     "@polymer/app-layout": "^3.1.0",
     "@polymer/iron-flex-layout": "^3.0.1",
     "@polymer/iron-icon": "^3.0.1",
@@ -90,64 +90,65 @@
     "@polymer/paper-tabs": "^3.1.0",
     "@polymer/paper-toast": "^3.0.1",
     "@polymer/paper-tooltip": "^3.0.1",
-    "@polymer/polymer": "3.4.1",
-    "@thomasloven/round-slider": "0.5.4",
-    "@vaadin/combo-box": "^23.2.0",
-    "@vaadin/vaadin-themable-mixin": "^23.2.0",
+    "@polymer/polymer": "3.5.1",
+    "@thomasloven/round-slider": "0.6.0",
+    "@vaadin/combo-box": "^23.3.26",
+    "@vaadin/vaadin-themable-mixin": "^23.3.26",
     "@vibrant/color": "^3.2.1-alpha.1",
     "@vibrant/core": "^3.2.1-alpha.1",
     "@vibrant/quantizer-mmcq": "^3.2.1-alpha.1",
-    "@vue/web-component-wrapper": "^1.2.0",
-    "@webcomponents/scoped-custom-element-registry": "^0.0.5",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "app-datepicker": "^5.0.1",
-    "chart.js": "^3.3.2",
-    "comlink": "^4.3.1",
-    "core-js": "^3.15.2",
-    "cropperjs": "^1.5.12",
-    "date-fns": "^2.23.0",
+    "@vue/web-component-wrapper": "^1.3.0",
+    "@webcomponents/scoped-custom-element-registry": "^0.0.9",
+    "@webcomponents/webcomponentsjs": "^2.8.0",
+    "app-datepicker": "^5.1.1",
+    "chart.js": "^3.9.1",
+    "comlink": "^4.4.1",
+    "core-js": "^3.33.2",
+    "cropperjs": "^1.6.1",
+    "date-fns": "^2.30.0",
     "deep-clone-simple": "^1.1.1",
     "deep-freeze": "^0.0.1",
-    "fuse.js": "^6.0.0",
-    "google-timezones-json": "^1.0.2",
-    "hls.js": "^1.2.1",
-    "home-assistant-js-websocket": "^8.0.0",
-    "idb-keyval": "^5.1.3",
-    "intl-messageformat": "^9.9.1",
+    "fuse.js": "^6.6.2",
+    "google-timezones-json": "^1.2.0",
+    "hls.js": "^1.4.12",
+    "home-assistant-js-websocket": "^8.2.0",
+    "idb-keyval": "^5.1.5",
+    "intl-messageformat": "^9.13.0",
     "js-yaml": "^4.1.0",
-    "leaflet": "^1.7.1",
+    "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "lit": "^2.8.0",
-    "marked": "^4.0.12",
+    "marked": "^4.3.0",
     "memoize-one": "^5.2.1",
     "node-vibrant": "3.2.1-alpha.1",
     "proxy-polyfill": "^0.3.2",
-    "punycode": "^2.1.1",
-    "qr-scanner": "^1.3.0",
-    "qrcode": "^1.4.4",
+    "punycode": "^2.3.1",
+    "qr-scanner": "^1.4.2",
+    "qrcode": "^1.5.3",
     "regenerator-runtime": "^0.13.8",
     "resize-observer-polyfill": "^1.5.1",
     "roboto-fontface": "^0.10.0",
-    "sortablejs": "^1.14.0",
-    "superstruct": "^0.15.2",
-    "tinykeys": "^1.1.3",
-    "tsparticles": "^1.34.0",
-    "unfetch": "^4.1.0",
-    "vis-data": "^7.1.2",
-    "vis-network": "^8.5.4",
-    "vue": "^2.6.12",
-    "vue2-daterange-picker": "^0.5.1",
-    "workbox-cacheable-response": "^6.4.2",
-    "workbox-core": "^6.4.2",
-    "workbox-expiration": "^6.4.2",
-    "workbox-precaching": "^6.4.2",
-    "workbox-routing": "^6.4.2",
-    "workbox-strategies": "^6.4.2",
-    "xss": "^1.0.9"
+    "sortablejs": "^1.15.0",
+    "superstruct": "^0.15.5",
+    "tinykeys": "^1.4.0",
+    "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0",
+    "unfetch": "^4.2.0",
+    "vis-data": "^7.1.8",
+    "vis-network": "^8.5.6",
+    "vue": "^2.7.15",
+    "vue2-daterange-picker": "^0.6.8",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.6.0",
+    "workbox-expiration": "^6.6.0",
+    "workbox-precaching": "^6.6.0",
+    "workbox-routing": "^6.6.0",
+    "workbox-strategies": "^6.6.0",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-external-helpers": "^7.14.5",
+    "@babel/core": "^7.23.3",
+    "@babel/plugin-external-helpers": "^7.23.3",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-decorators": "^7.15.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
@@ -158,86 +159,86 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/plugin-syntax-top-level-await": "^7.14.5",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-typescript": "^7.15.0",
-    "@koa/cors": "^3.1.0",
-    "@open-wc/dev-server-hmr": "^0.0.2",
-    "@rollup/plugin-babel": "^5.2.1",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@koa/cors": "^3.4.3",
+    "@open-wc/dev-server-hmr": "^0.2.0",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-json": "^4.0.3",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
-    "@rollup/plugin-replace": "^2.3.2",
-    "@types/chromecast-caf-receiver": "5.0.12",
-    "@types/chromecast-caf-sender": "^1.0.3",
-    "@types/glob": "^7",
-    "@types/js-yaml": "^4",
-    "@types/leaflet": "^1",
-    "@types/leaflet-draw": "^1",
-    "@types/marked": "^4",
-    "@types/mocha": "^8",
-    "@types/qrcode": "^1.4.2",
-    "@types/sortablejs": "^1",
+    "@rollup/plugin-replace": "^2.4.2",
+    "@types/chromecast-caf-receiver": "5.0.15",
+    "@types/chromecast-caf-sender": "^1.0.8",
+    "@types/glob": "^7.2.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/leaflet": "^1.9.8",
+    "@types/leaflet-draw": "^1.0.10",
+    "@types/marked": "^4.3.2",
+    "@types/mocha": "^8.2.3",
+    "@types/qrcode": "^1.5.5",
+    "@types/sortablejs": "^1.15.5",
     "@types/webspeechapi": "^0.0.29",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "@web/dev-server": "^0.0.24",
-    "@web/dev-server-rollup": "^0.2.11",
-    "babel-loader": "^8.2.2",
-    "chai": "^4.3.4",
-    "del": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@web/dev-server": "^0.4.0",
+    "@web/dev-server-rollup": "^0.2.13",
+    "babel-loader": "^8.3.0",
+    "chai": "^4.3.10",
+    "del": "^4.1.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-webpack": "^0.13.1",
-    "eslint-plugin-disable": "^2.0.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-lit": "^1.6.1",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-config-airbnb-typescript": "^14.0.2",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-import-resolver-webpack": "^0.13.8",
+    "eslint-plugin-disable": "^2.0.3",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-lit": "^1.10.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^1.1.5",
-    "eslint-plugin-wc": "^1.3.2",
+    "eslint-plugin-wc": "^1.5.0",
     "fancy-log": "^1.3.3",
     "fs-extra": "^7.0.1",
-    "glob": "^7.2.0",
+    "glob": "^7.2.3",
     "gulp": "^4.0.2",
     "gulp-flatmap": "^1.0.2",
-    "gulp-json-transform": "^0.4.6",
+    "gulp-json-transform": "^0.4.8",
     "gulp-merge-json": "^1.3.1",
     "gulp-rename": "^2.0.0",
     "gulp-zopfli-green": "^3.0.1",
     "html-minifier": "^4.0.0",
-    "instant-mocha": "^1.3.1",
-    "lint-staged": "^13.0.3",
+    "instant-mocha": "^1.5.2",
+    "lint-staged": "^13.3.0",
     "lit-analyzer": "^1.2.1",
     "lodash.template": "^4.5.0",
-    "magic-string": "^0.25.7",
+    "magic-string": "^0.25.9",
     "map-stream": "^0.0.7",
     "merge-stream": "^1.0.1",
     "mocha": "^8.4.0",
-    "object-hash": "^2.0.3",
-    "open": "^7.0.4",
+    "object-hash": "^2.2.0",
+    "open": "^7.4.2",
     "pinst": "^3.0.0",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.8",
     "require-dir": "^1.2.0",
-    "rollup": "^2.8.2",
+    "rollup": "^2.79.1",
     "rollup-plugin-string": "^3.0.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-visualizer": "^4.0.4",
+    "rollup-plugin-terser": "^5.3.1",
+    "rollup-plugin-visualizer": "^4.2.2",
     "serve": "^11.3.2",
-    "sinon": "^11.0.0",
-    "source-map-url": "^0.4.0",
-    "systemjs": "^6.3.2",
-    "terser-webpack-plugin": "^5.2.4",
+    "sinon": "^16.1.3",
+    "source-map-url": "^0.4.1",
+    "systemjs": "^6.14.2",
+    "terser-webpack-plugin": "^5.3.9",
     "ts-lit-plugin": "^1.2.1",
-    "typescript": "^4.4.3",
+    "typescript": "^4.9.5",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
-    "webpack": "^5.55.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.0",
-    "webpack-manifest-plugin": "^4.0.2",
-    "webpackbar": "^5.0.0-3",
-    "workbox-build": "^6.4.2"
+    "webpack": "^5.89.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-manifest-plugin": "^4.1.1",
+    "webpackbar": "^5.0.2",
+    "workbox-build": "^6.6.0"
   },
   "_comment": "Polymer 3.2 contained a bug, fixed in https://github.com/Polymer/polymer/pull/5569, add as patch",
   "resolutions": {
