--- a/nodejs/frontend/package.json
+++ b/nodejs/frontend/package.json
@@ -24,34 +24,30 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@braintree/sanitize-url": "^6.0.4",
-    "@codemirror/autocomplete": "^0.19.15",
-    "@codemirror/commands": "^0.19.8",
-    "@codemirror/gutter": "^0.19.9",
-    "@codemirror/highlight": "^0.19.8",
-    "@codemirror/history": "^0.19.2",
-    "@codemirror/legacy-modes": "^0.19.1",
-    "@codemirror/rectangular-selection": "^0.19.2",
-    "@codemirror/search": "^0.19.10",
-    "@codemirror/state": "^0.19.9",
-    "@codemirror/stream-parser": "^0.19.9",
-    "@codemirror/text": "^0.19.6",
-    "@codemirror/view": "^0.19.48",
-    "@formatjs/intl-datetimeformat": "^4.5.2",
-    "@formatjs/intl-getcanonicallocales": "^1.9.2",
-    "@formatjs/intl-locale": "^2.4.47",
-    "@formatjs/intl-numberformat": "^7.4.3",
-    "@formatjs/intl-pluralrules": "^4.3.3",
-    "@formatjs/intl-relativetimeformat": "^9.5.2",
-    "@formatjs/intl-utils": "^3.8.4",
+    "@codemirror/autocomplete": "^6.11.0",
+    "@codemirror/commands": "^6.3.0",
+    "@codemirror/language": "^6.9.2",
+    "@codemirror/legacy-modes": "^6.3.3",
+    "@codemirror/search": "^6.5.4",
+    "@codemirror/state": "^6.3.1",
+    "@codemirror/view": "^6.22.0",
+    "@egjs/hammerjs": "^2.0.17",
+    "@formatjs/intl-datetimeformat": "^6.11.2",
+    "@formatjs/intl-getcanonicallocales": "^2.3.0",
+    "@formatjs/intl-locale": "^3.4.1",
+    "@formatjs/intl-numberformat": "^8.8.1",
+    "@formatjs/intl-pluralrules": "^5.2.8",
+    "@formatjs/intl-relativetimeformat": "^11.2.8",
     "@fullcalendar/common": "5.11.5",
     "@fullcalendar/core": "5.11.5",
     "@fullcalendar/daygrid": "5.11.5",
     "@fullcalendar/interaction": "5.11.5",
     "@fullcalendar/list": "5.11.5",
     "@fullcalendar/timegrid": "5.11.5",
+    "@lezer/highlight": "^1.1.6",
     "@lit-labs/motion": "^1.0.6",
     "@lit-labs/virtualizer": "^2.0.10",
-    "@material/chips": "14.0.0",
+    "@material/chips": "^14.0.0",
     "@material/data-table": "14.0.0",
     "@material/mwc-button": "0.27.0",
     "@material/mwc-checkbox": "0.27.0",
@@ -103,6 +99,7 @@
     "app-datepicker": "^5.1.1",
     "chart.js": "^3.9.1",
     "comlink": "^4.4.1",
+    "component-emitter": "1.3.0",
     "core-js": "^3.33.2",
     "cropperjs": "^1.6.1",
     "date-fns": "^2.30.0",
@@ -115,6 +112,7 @@
     "idb-keyval": "^5.1.5",
     "intl-messageformat": "^9.13.0",
     "js-yaml": "^4.1.0",
+    "keycharm": "0.4.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "lit": "^2.8.0",
@@ -130,12 +128,15 @@
     "roboto-fontface": "^0.10.0",
     "sortablejs": "^1.15.0",
     "superstruct": "^0.15.5",
+    "timsort": "0.3.0",
     "tinykeys": "^1.4.0",
     "tsparticles": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
     "unfetch": "^4.2.0",
+    "uuid": "9.0.1",
     "vis-data": "^7.1.8",
-    "vis-network": "^8.5.6",
+    "vis-network": "^9.1.9",
+    "vis-util": "5.0.6",
     "vue": "^2.7.15",
     "vue2-daterange-picker": "^0.6.8",
     "workbox-cacheable-response": "^6.5.4",
@@ -149,96 +150,95 @@
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/plugin-external-helpers": "^7.23.3",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-decorators": "^7.15.4",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-    "@babel/plugin-proposal-private-methods": "^7.14.5",
-    "@babel/plugin-proposal-private-property-in-object": "^7.15.4",
+    "@babel/plugin-proposal-decorators": "^7.23.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/plugin-syntax-top-level-await": "^7.14.5",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.3",
+    "@babel/plugin-transform-object-rest-spread": "^7.23.3",
+    "@babel/plugin-transform-optional-chaining": "^7.23.3",
+    "@babel/plugin-transform-private-methods": "^7.23.3",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@koa/cors": "^3.4.3",
+    "@koa/cors": "^4.0.0",
     "@open-wc/dev-server-hmr": "^0.2.0",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "@rollup/plugin-replace": "^2.4.2",
-    "@types/chromecast-caf-receiver": "5.0.15",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.5",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@types/chromecast-caf-receiver": "6.0.12",
     "@types/chromecast-caf-sender": "^1.0.8",
-    "@types/glob": "^7.2.0",
+    "@types/glob": "^8.1.0",
     "@types/js-yaml": "^4.0.9",
     "@types/leaflet": "^1.9.8",
     "@types/leaflet-draw": "^1.0.10",
-    "@types/marked": "^4.3.2",
-    "@types/mocha": "^8.2.3",
+    "@types/mocha": "^10.0.4",
     "@types/qrcode": "^1.5.5",
     "@types/sortablejs": "^1.15.5",
-    "@types/webspeechapi": "^0.0.29",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "@web/dev-server": "^0.4.0",
-    "@web/dev-server-rollup": "^0.2.13",
-    "babel-loader": "^8.3.0",
+    "@web/dev-server-rollup": "^0.6.0",
+    "babel-loader": "^9.1.3",
     "chai": "^4.3.10",
+    "convert-source-map": "^2.0.0",
     "del": "^4.1.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.2",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint": "^8.53.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-webpack": "^0.13.8",
     "eslint-plugin-disable": "^2.0.3",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-lit": "^1.10.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unused-imports": "^1.1.5",
-    "eslint-plugin-wc": "^1.5.0",
-    "fancy-log": "^1.3.3",
-    "fs-extra": "^7.0.1",
-    "glob": "^7.2.3",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint-plugin-wc": "^2.0.4",
+    "esprima": "^4.0.1",
+    "fancy-log": "^2.0.0",
+    "fs-extra": "^11.1.1",
+    "glob": "^10.3.10",
     "gulp": "^4.0.2",
     "gulp-flatmap": "^1.0.2",
     "gulp-json-transform": "^0.4.8",
-    "gulp-merge-json": "^1.3.1",
+    "gulp-merge-json": "^2.1.2",
     "gulp-rename": "^2.0.0",
-    "gulp-zopfli-green": "^3.0.1",
+    "gulp-zopfli-green": "^6.0.1",
     "html-minifier": "^4.0.0",
     "instant-mocha": "^1.5.2",
-    "lint-staged": "^13.3.0",
-    "lit-analyzer": "^1.2.1",
+    "lint-staged": "^15.0.2",
+    "lit-analyzer": "^2.0.1",
     "lodash.template": "^4.5.0",
-    "magic-string": "^0.25.9",
+    "magic-string": "^0.30.5",
     "map-stream": "^0.0.7",
-    "merge-stream": "^1.0.1",
-    "mocha": "^8.4.0",
-    "object-hash": "^2.2.0",
+    "merge-stream": "^2.0.0",
+    "mocha": "^10.2.0",
+    "object-hash": "^3.0.0",
     "open": "^7.4.2",
     "pinst": "^3.0.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
     "require-dir": "^1.2.0",
-    "rollup": "^2.79.1",
+    "rollup": "^3.29.4",
     "rollup-plugin-string": "^3.0.0",
-    "rollup-plugin-terser": "^5.3.1",
-    "rollup-plugin-visualizer": "^4.2.2",
-    "serve": "^11.3.2",
-    "sinon": "^16.1.3",
-    "source-map-url": "^0.4.1",
+    "rollup-plugin-visualizer": "^5.9.2",
+    "serve": "^14.2.1",
+    "sinon": "^17.0.1",
     "systemjs": "^6.14.2",
     "terser-webpack-plugin": "^5.3.9",
-    "ts-lit-plugin": "^1.2.1",
-    "typescript": "^4.9.5",
+    "ts-lit-plugin": "^2.0.1",
+    "typescript": "^5.2.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "webpack": "^5.89.0",
-    "webpack-cli": "^4.10.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-manifest-plugin": "^4.1.1",
+    "webpack-manifest-plugin": "^5.0.0",
     "webpackbar": "^5.0.2",
-    "workbox-build": "^6.6.0"
+    "workbox-build": "^7.0.0"
   },
   "_comment": "Polymer 3.2 contained a bug, fixed in https://github.com/Polymer/polymer/pull/5569, add as patch",
   "resolutions": {
