--- a/nodejs/frontend/package.json
+++ b/nodejs/frontend/package.json
@@ -97,7 +97,7 @@
     "@webcomponents/scoped-custom-element-registry": "^0.0.9",
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "app-datepicker": "^5.1.1",
-    "chart.js": "^3.9.1",
+    "chart.js": "3.4.1",
     "comlink": "^4.4.1",
     "component-emitter": "1.3.0",
     "core-js": "^3.33.2",
