--- a/nodejs/frontend/package.json
+++ b/nodejs/frontend/package.json
@@ -97,6 +97,7 @@
     "@webcomponents/scoped-custom-element-registry": "^0.0.9",
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "app-datepicker": "^5.1.1",
+    "browserslist": "^4.22.1",
     "chart.js": "3.4.1",
     "comlink": "^4.4.1",
     "component-emitter": "1.3.0",
@@ -231,6 +232,7 @@
     "terser-webpack-plugin": "^5.3.9",
     "ts-lit-plugin": "^2.0.1",
     "typescript": "^5.2.2",
+    "update-browserslist-db": "^1.0.13",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "webpack": "^5.89.0",
@@ -254,5 +256,9 @@
     "trailingComma": "es5",
     "arrowParens": "always"
   },
+  "browserslist": [
+    "defaults and fully supports es5",
+    "maintained node versions"
+  ],
   "packageManager": "yarn@4.0.1"
 }
